# ai

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: anthropic_generate.rs  anthropic_stream.rs  anthropic_test.rs  basic_generate.rs  config_test.rs  custom_headers.rs  gemini_generate.rs  gemini_stream.rs  multi_provider.rs  simple.rs  streaming.rs  tool_calling_basic.rs  tool_calling_streaming.rs
src/: error.rs  lib.rs
src/client/: builder.rs  config.rs  mod.rs
src/provider/: dispatcher.rs  mod.rs  trait_def.rs
src/providers/: mod.rs
src/providers/anthropic/: convert.rs  mod.rs  provider.rs  stream.rs  types.rs
src/providers/gemini/: convert.rs  mod.rs  provider.rs  stream.rs  types.rs
src/providers/openai/: convert.rs  error.rs  mod.rs  provider.rs  stream.rs  types.rs
src/registry/: mod.rs
src/types/: headers.rs  message.rs  mod.rs  options.rs  request.rs  response.rs  stream.rs
tests/: lib.rs
tests/integration/: mod.rs  openai.rs
tests/unit/: client.rs  mod.rs  provider.rs  types.rs
